completed main prompts

--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -5,3 +5,5 @@
         <li><%= link_to employee.full_name, employee_path(employee.id) %></li>
     <% end %>
 </ul>
+
+<h3><%=link_to "Add New Employee", new_employee_path%></h3>
