--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -16,7 +16,8 @@
     <%= text_area_tag :'employee[office]' %><br>
 
     <label>Employee Dog ID:</label><br>
-    <%= text_area_tag :'employee[dog_id]' %><br>
+    <%= text_area_tag :'employee[dog_id]' %><br><br>
+
 
     <label>Employee Picture:</label><br>
     <%= text_area_tag :'employee[img_url]' %><br>
